--- a/css/proyecto.css
+++ b/css/proyecto.css
@@ -23,9 +23,151 @@ p {
     border-bottom: none; 
 }
 
+.texto_juegos {
+  margin-top: 10px;
+} 
+
+.texto_index {
+  margin-top: 10px;
+  margin-bottom: 10px;
+} 
+
+.contenedor_index {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
 
 
 
+.contenedor {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto auto auto;
+  row-gap: 10px;
+}
+
+.item1 { grid-row: 1/2;
+  grid-column: 1/2; 
+}
+.item2 { grid-row: 1/2;
+  grid-column: 2/3;
+}
+.item3 { grid-row: 1/2;
+  grid-column: 3/4;
+}
+
+.item4 { grid-row: 2/3;
+  grid-column: 1/2;
+}
+.item5 { grid-row: 2/3;
+  grid-column: 2/3;
+}
+.item6 { grid-row: 2/3;
+  grid-column: 3/4;
+}
+      
+
+.item7 { grid-row: 3/4;
+  grid-column: 1/2;
+}
+.item8 { grid-row: 3/4;
+  grid-column: 2/3;
+}
+.item9 { grid-row: 3/4;
+  grid-column: 3/4;
+}
+ 
+.item10 { grid-row: 4/5;
+  grid-column: 1/2;
+}
+
+.footer_class {
+  margin-top: 10px;
+}
+
+.textos_esp {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+@media only screen and (max-width : 420px) {
+
+  .contenedor_index {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .imagen1 {
+    width: 60%;
+    height: 80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .imagen2 {
+    width: 80%;
+    height: 80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* GRILLA JUEGOS */
+
+  .contenedor {
+      display: grid;
+      grid-template-columns: auto;
+      grid-template-rows: repeat(5,auto);
+      row-gap: 10px;
+  }
+  .item1 {
+      grid-column: 1/2;
+      grid-row: 1/2;
+  }
+  .item2 {
+      grid-column: 1/2;
+      grid-row: 2/3;
+  }
+  .item3 {
+      grid-column: 1/2;
+      grid-row: 3/4;
+  }
+  .item4 {
+      grid-column: 1/2;
+      grid-row: 4/5;
+  }
+  .item5 {
+      grid-column: 1/2;
+      grid-row: 5/6;
+  }
+  .item6 {
+      grid-column: 1/2;
+      grid-row: 6/7;
+  }
+  .item7 {
+      grid-column: 1/2;
+      grid-row: 7/8;
+  }
+  .item8 {
+      grid-column: 1/2;
+      grid-row: 8/9;
+  }
+  .item9 {
+      grid-column: 1/2;
+      grid-row: 9/10;
+  }
+  .item10 {
+      grid-column: 1/2;
+      grid-row: 10/11;
+  }
+}
+
+
+
+        
 
 
